--- a/Pro2/style1.css
+++ b/Pro2/style1.css
@@ -1,14 +1,34 @@
 body {
     display:flex;
-    gap:50px;
+    gap: 5px;
     background-color: #f5efef;
     flex-direction:column;
+    max-width: 80%;
+    border-style: none;
+    margin:auto;
 }
 .logo {
     background-color:#c0c0c0 ;
+    font-size:20px;
+    font-family:Verdana, Geneva, Tahoma, sans-serif;
+    height:50px;
+    border-style: none;
+    align-items:center;
+    display:flex;
+    justify-content:left;
+    padding-left:20px;
+
 }
 .navigation {
     background-color:#c0c0c0 ;
+    height:40px;
+    border-style: none;
+    display:flex;
+    align-items:center;
+    justify-content:center;
+    font-size: 20px;
+    font-family: Verdana, Geneva, Tahoma, sans-serif;
+    
 }
 .main {
     
@@ -19,18 +39,52 @@ body {
 }
 .footer {
     background-color:#c0c0c0 ;
+    height:50px;
+    border-style: none;
+    display:flex;
+    align-items:center;
+    justify-content:center;
+    font-size: 20px;
+    font-family: Verdana, Geneva, Tahoma, sans-serif;
 }
 .header {
     background-color:#c0c0c0 ;
+    height:150px;
+    border-style: none;
+    display:flex;
+    align-items:center;
+    justify-content:center;
+    font-size: 20px;
+    font-family: Verdana, Geneva, Tahoma, sans-serif;
 }
-.body {
+.body{
    
     display:flex;
-    gap:20px;
+    gap:30px;
+    clear:both
+    
 }
 .side {
     background-color:#c0c0c0 ;
+    height:600px;
+    width:40%;
+    border-style: none;
+    display:flex;
+    align-items:center;
+    justify-content:center;
+    font-size: 20px;
+    font-family: Verdana, Geneva, Tahoma, sans-serif;
+    
 }
 .body-area {
     background-color:#c0c0c0 ;
+    width:60%;
+    border-style: none;
+    display:flex;
+    align-items:center;
+    justify-content:center;
+    font-size: 20px;
+    font-family: Verdana, Geneva, Tahoma, sans-serif;
+    height:600px
+
 }
